# fastAPI_yinmang

./: .gitignore  README.md  pyproject.toml
scripts/: run-web
yinmang/: __init__.py
yinmang/api/: __init__.py
yinmang/api/view/: main.py
yinmang/core/: app.py  settings.py
yinmang/models/: __init__.py  employer_model.py  file_students.py  students_model.py
yinmang/repository/: base_repository.py  students_repository.py
yinmang/schemas/: __init__.py  base_schema.py  student_schema.py
yinmang/services/: __init__.py  base_service.py  students_service.py
yinmang/utils/: __init__.py  schema.py
