[tool.poetry]
name = "yinmang"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
fastapi-pagination = "^0.12.12"
mongoengine = "^0.27.0"
loguru = "^0.7.2"
pydantic-settings = "^2.0.3"
pydantic = "^2.4.2"
pyparsing = "^3.1.1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
